--- a/index.html
+++ b/index.html
@@ -11,28 +11,19 @@
 
 <body>
     <div class="div-main" id="main">
-        <!-- <center> <img class="netflixsvg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/799px-Netflix_2015_logo.svg.png?20190206123158" alt=""> </center> -->
 
-        <!-- NOME DELLA COLLEZIONE -->
         <h1 class="collection-name-class" id="collection-name"></h1>
 
         <div class="div-order-btn">
-            <button class="btn-orderTitle" onclick="orderByTitle()">Order by title </button>
+            <button class="btn-orderTitle" onclick="orderByTitle()"> Order by title </button>
         </div>
 
-        <ul id="collection-listUl"></ul> <!-- CREAZIONE DELLA LISTA COLLEZIONE -->
+        <ul id="collection-listUl"></ul> 
 
 
 
     </div>
 
-    <!-- ///Order By title
-    ///Order by upVote
-    ///Order By downVote
-    ///Order By Best
-    netflix svg
-https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/799px-Netflix_2015_logo.svg.png?20190206123158
--->
 
 </body>
 
