--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="eng">
 
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix-Crex</title>
     <link rel="stylesheet" href="./style.css">
+
 </head>
 
 <body>
@@ -19,8 +21,6 @@
         </div>
 
         <ul id="collection-listUl"></ul> 
-
-
 
     </div>
 
