--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <h1 class="collection-name-class" id="collection-name"></h1>
 
         <div class="div-order-btn">
-            <button class="btn-orderTitle" onclick="orderByTitle()"> Order by title </button>
+            <button class="btn-orderTitle" onclick="orderByTitle()"> Order by Title </button>
+            <button class="btn-orderByBest" onclick="orderByBestSeries()"> Order by Best Serie </button>
         </div>
 
         <ul id="collection-listUl"></ul> 
