--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         <div class="div-order-btn">
             <button class="btn-orderTitle" onclick="orderByTitle()"> Title </button>
-            <button class="btn-orderByBest" onclick="orderByBestSeries()"> Best Serie </button>
+            <button class="btn-orderByBest" onclick="orderByUpVotes()"> Best Serie </button>
+            <button class="btn-orderByWorst" onclick="orderByDownVotes()"> Worst Serie </button>
         </div>
 
         <ul id="collection-listUl"></ul>
